Refactor backend tests